deployment/k8s/incluster/beetle.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: beetle-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: beetle
  template:
    metadata:
      labels:
        app: beetle
      name: beetle
    spec:
      serviceAccount: beetle-service-account
      serviceAccountName: beetle-service-account
      containers:
        -
          image: "clivern/beetle:1.0.1"
          name: beetle-app
          volumeMounts:
            -
              mountPath: /app/configs
              name: incluster-beetle-configs-volume
      volumes:
        -
          configMap:
            name: incluster-beetle-configs
          name: incluster-beetle-configs-volume


---
apiVersion: v1
kind: Service
metadata:
  name: beetle-svc
  labels:
    app: beetle
spec:
  ports:
    -
      port: 80
      targetPort: 8080
  selector:
    app: beetle
  type: LoadBalancer


---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    # example.com/beetle rewrites to example.com/
    # example.com/beetle/ rewrites to example.com/
    # example.com/beetle/_ready rewrites to example.com/_ready
    nginx.ingress.kubernetes.io/rewrite-target: /$2
  name: beetle-ing
spec:
  rules:
  - host: example.com
    http:
      paths:
      - path: /beetle(/|$)(.*)
        pathType: Prefix
        backend:
          service:
            name: beetle-svc
            port:
              number: 80
